--- a/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
@@ -62,12 +62,16 @@
     <Compile Include="Entidade\TipoPorta.cs" />
     <Compile Include="Entidade\Usuario.cs" />
     <Compile Include="Fachada\Fachada.cs" />
+    <Compile Include="Fachada\UsuarioFachada.cs" />
     <Compile Include="Negocio\NegocioBase.cs" />
+    <Compile Include="Negocio\ResidenciaNegocio.cs" />
     <Compile Include="Negocio\UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\Map\ResidenciaMap.cs" />
     <Compile Include="Repositorio\Map\UsuarioMap.cs" />
     <Compile Include="Repositorio\RepositorioBase.cs" />
     <Compile Include="Repositorio\Database\DatabaseContext.cs" />
+    <Compile Include="Repositorio\ResidenciaRepositorio.cs" />
     <Compile Include="Repositorio\UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +81,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
