--- a/Source/HomeAutomexWS/HomeAutomexWebApplication/HomeAutomexWebApplication.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexWebApplication/HomeAutomexWebApplication.csproj
@@ -47,6 +47,9 @@
       <HintPath>..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
