--- a/Source/HomeAutomexWS/HomeAutomexLibrary/packages.config
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="GenericRepository" version="0.2.1.0" targetFramework="net45" />
   <package id="GenericRepository.EF" version="0.2.1.0" targetFramework="net45" />
+  <package id="jQuery" version="2.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
 </packages>
