--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
@@ -55,7 +55,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -78,12 +78,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx"
-        binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap"
-        contract="HomeAutomexWS.HomeAutomexWSSoap" name="HomeAutomexWSSoap" />
-      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx"
-        binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap1"
-        contract="HomeAutomexService.HomeAutomexWSSoap" name="HomeAutomexWSSoap1" />
+      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx" binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap" contract="HomeAutomexWS.HomeAutomexWSSoap" name="HomeAutomexWSSoap" />
+      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx" binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap1" contract="HomeAutomexService.HomeAutomexWSSoap" name="HomeAutomexWSSoap1" />
     </client>
   </system.serviceModel>
 </configuration>
