residencia e modulo pronta e uma parte de ambiente, implementarei hoje na aula ;D

--- a/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
+++ b/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
@@ -23,6 +23,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="HomeAutomexdbEntities" connectionString="metadata=res://*/teste.HomeAutomexModel.csdl|res://*/teste.HomeAutomexModel.ssdl|res://*/teste.HomeAutomexModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CST-EDSON;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HomeAutomexdbEntities" connectionString="metadata=res://*/teste.HomeAutomexModel.csdl|res://*/teste.HomeAutomexModel.ssdl|res://*/teste.HomeAutomexModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDSON-CST;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
