--- a/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
@@ -66,11 +66,14 @@
     <Compile Include="Entidade\Usuario.cs" />
     <Compile Include="Fachada\Fachada.cs" />
     <Compile Include="Fachada\UsuarioFachada.cs" />
+    <Compile Include="Negocio\AmbienteNegocio.cs" />
     <Compile Include="Negocio\ModuloNegocio.cs" />
     <Compile Include="Negocio\NegocioBase.cs" />
     <Compile Include="Negocio\ResidenciaNegocio.cs" />
     <Compile Include="Negocio\UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\AmbienteRepositorio.cs" />
+    <Compile Include="Repositorio\Map\AmbienteMap.cs" />
     <Compile Include="Repositorio\Map\ModuloMap.cs" />
     <Compile Include="Repositorio\ModuloRepositorio.cs" />
     <Compile Include="Repositorio\Map\DispositivoMap.cs" />
