--- a/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
@@ -60,20 +60,28 @@
     <Compile Include="Entidade\Modulo.cs" />
     <Compile Include="Entidade\Perfil.cs" />
     <Compile Include="Entidade\Porta.cs" />
+    <Compile Include="Entidade\PortaModulo.cs" />
     <Compile Include="Entidade\Residencia.cs" />
     <Compile Include="Entidade\Sensor.cs" />
     <Compile Include="Entidade\TipoPorta.cs" />
     <Compile Include="Entidade\Usuario.cs" />
     <Compile Include="Fachada\Fachada.cs" />
-    <Compile Include="Fachada\UsuarioFachada.cs" />
     <Compile Include="Negocio\AmbienteNegocio.cs" />
+    <Compile Include="Negocio\DispositivoNegocio.cs" />
+    <Compile Include="Negocio\PortaModuloNegocio.cs" />
+    <Compile Include="Negocio\TipoPortaNegocio.cs" />
     <Compile Include="Negocio\ModuloNegocio.cs" />
     <Compile Include="Negocio\NegocioBase.cs" />
     <Compile Include="Negocio\ResidenciaNegocio.cs" />
     <Compile Include="Negocio\UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\AmbienteRepositorio.cs" />
+    <Compile Include="Repositorio\DispositivoRepositorio.cs" />
     <Compile Include="Repositorio\Map\AmbienteMap.cs" />
+    <Compile Include="Repositorio\PortaModuloRepositorio.cs" />
+    <Compile Include="Repositorio\Map\PortaModuloMap.cs" />
+    <Compile Include="Repositorio\TipoPortaRepositorio.cs" />
+    <Compile Include="Repositorio\Map\TipoPortaMap.cs" />
     <Compile Include="Repositorio\Map\ModuloMap.cs" />
     <Compile Include="Repositorio\ModuloRepositorio.cs" />
     <Compile Include="Repositorio\Map\DispositivoMap.cs" />
