--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
@@ -12,11 +12,13 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-HomeAutomex-20140227202313;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-HomeAutomex-20140227202313.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="enableSimpleMembership" value="false"/>
+    <add key="autoFormsAuthentication" value="false"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -35,6 +37,12 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <membership defaultProvider="WSMembershipProvider">
+    <providers>
+      <clear />
+      <add name="WSMembershipProvider" type="HomeAutomex.WSMembershipProvider" />
+    </providers>
+  </membership>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
