--- a/Source/HomeAutomexMobile/HomeAutomex/bin/AndroidManifest.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/bin/AndroidManifest.xml
@@ -9,20 +9,29 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>  
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="br.com.adeusunibratec.mb.PrincipalActivity"
-            android:label="@string/app_name" >
+            android:name="br.com.adeusunibratec.mb.SplashActivity"
+            android:label="@string/title_activity_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="br.com.adeusunibratec.mb.PrincipalActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="br.com.adeusunibratec.mb.LoginActivity"
+            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
