--- a/Source/HomeAutomexMobile/HomeAutomex/bin/AndroidManifest.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/bin/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name="br.com.adeusunibratec.mb.OpcoesUsuariosActivity"
             android:label="@string/title_activity_opcoes_usuarios" >
         </activity>
+        <activity
+            android:name="br.com.adeusunibratec.mb.FavoritosActivity"
+            android:label="@string/title_activity_favoritos" >
+        </activity>
     </application>
 
 </manifest>
