--- a/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
+++ b/Source/HomeAutomexWS/HomeAutomexWebApplication/Web.config
@@ -11,7 +11,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -29,6 +28,6 @@
     <!--<add name="HomeAutomexConnection" connectionString="Server=(localdb)\v11.0;Integrated Security=true;"/>-->
     <!--<add name="HomeAutomexConnection" connectionString="data source=localhost\V11.0;initial catalog=HomeAutomexdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <!--<add name="HomeAutomexConnection" connectionString="Data Source=(localdb)\V11.0;Initial Catalog=HomeAutomexdb;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <add name="HomeAutomexConnection" connectionString="Data Source=FILIPE\FILIPE_SQLSERVER;Initial Catalog=HomeAutomexdb;Persist Security Info=True;User ID=sa;Password=Filipe@2014!" providerName="System.Data.SqlClient"/>
+    <!--<add name="HomeAutomexConnection" connectionString="Data Source=FILIPE\FILIPE_SQLSERVER;Initial Catalog=HomeAutomexdb;Persist Security Info=True;User ID=sa;Password=Filipe@2014!" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 </configuration>
